preparing for version update 2025.6

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -207,7 +207,7 @@
    ============================================================ */
 .footer {
   background: var(--clr-surface);
-  color: #f2edb8;
+  color: #747373;
   padding: var(--s-md) var(--s-sm);
   text-align: center;
   font-size: var(--fs-sm);
